--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <body>
     <h1>Alarm Clock Project</h1>
     <p id="clock">clock</p>
+    <button type="button">12 hour</button>
+    <button type="button">24 hour</button>
+<div id="footer">
+    <footer>Tryon Baldwin</footer>
+    <footer>created in 2023</footer>
+
 </div>
 </body>
 </html>
